# cram_demo

./: .gitignore
controller_toolchain_experiments/serapeum/: description-interface.lisp
controller_toolchain_experiments/src/: controller-toolchain-experiments.asd  package.lisp  pr2-fingertip-sensors.lisp
cram_pr2_fccl_demo/: README.md  cram-pr2-fccl-demo.asd  package.xml
cram_pr2_fccl_demo/config/: pr2_flipping_start_config.yaml  pr2_grasping_start_config.yaml  pr2_pouring_start_config.yaml
cram_pr2_fccl_demo/launch/: feature_vis.launch  pancake_object_vis.launch  pancake_real_scenario.launch  pancake_simulation_scenario.launch  pancake_static_transform_pubs.launch  pr2_loopback.launch
cram_pr2_fccl_demo/scripts/: oven_model.py  pancake_bottle_model.py
cram_pr2_fccl_demo/src/: controllers.lisp  designators.lisp  flipping-description  package.lisp  parameters.lisp  plans.lisp  pouring-description  tf.lisp  uima.lisp
cram_saphari_review_year2/: cram-saphari.asd  human-state-publisher.asd  saphari-msgs-conversions.asd  saphari-utility-nodes.asd
cram_saphari_review_year2/cram-saphari/: beasty-movements.lisp  beasty-predicates.lisp  human-tracking.lisp  main.lisp  package.lisp
cram_saphari_review_year2/launch/: human_state_publisher.launch  human_tf_converter.launch  saphari_demo.launch
cram_saphari_review_year2/scripts/: human_state_publisher  human_tf_converter
cram_saphari_review_year2/src/human-state-publisher/: human-state-publisher.lisp  message-conversions.lisp  package.lisp
cram_saphari_review_year2/src/saphari-msgs-conversions/: conversions.lisp  package.lisp
cram_saphari_review_year2/src/saphari-utility-nodes/: human-state-publisher.lisp  human-tf-converter.lisp  message-conversions.lisp  package.lisp
cram_tablesetting_demo/: CMakeLists.txt  cram-tablesetting-demo.asd  package.xml
cram_tablesetting_demo/asdf/: cram-tablesetting-demo.asd
cram_tablesetting_demo/src/: demo.lisp  facts.lisp  package.lisp
