<?xml version="1.0"?>
<package>
  <name>cram_tablesetting_demo</name>
  <version>0.1.0</version>
  <description>
    Top-level plan package for autonomous table-setting efforts
  </description>

  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>alexandria</build_depend>
  <build_depend>bullet_reasoning</build_depend>
  <build_depend>bullet_reasoning_designators</build_depend>
  <build_depend>cram_beliefstate</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_environment_representation</build_depend>
  <build_depend>cram_language</build_depend>
  <build_depend>cram_physics_utils</build_depend>
  <build_depend>cram_plan_knowledge</build_depend>
  <build_depend>cram_plan_library</build_depend>
  <build_depend>cram_pr2_knowledge</build_depend>
  <build_depend>cram_reasoning</build_depend>
  <build_depend>cram_roslisp_common</build_depend>
  <build_depend>cram_task_knowledge</build_depend>
  <build_depend>designator_integration_msgs</build_depend>
  <build_depend>designators_ros</build_depend>
  <build_depend>location_costmap</build_depend>
  <build_depend>object_location_designators</build_depend>
  <build_depend>occupancy_grid_costmap</build_depend>
  <build_depend>point_head_process_module</build_depend>
  <build_depend>pr2_description_lowres</build_depend>
  <build_depend>pr2_manipulation_knowledge</build_depend>
  <build_depend>pr2_manipulation_process_module</build_depend>
  <build_depend>pr2_navigation_process_module</build_depend>
  <build_depend>pr2_reachability_costmap</build_depend>
  <build_depend>robosherlock_process_module</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>semantic_map_costmap</build_depend>
  
  <run_depend>alexandria</run_depend>
  <run_depend>bullet_reasoning</run_depend>
  <run_depend>bullet_reasoning_designators</run_depend>
  <run_depend>cram_beliefstate</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_environment_representation</run_depend>
  <run_depend>cram_language</run_depend>
  <run_depend>cram_physics_utils</run_depend>
  <run_depend>cram_plan_knowledge</run_depend>
  <run_depend>cram_plan_library</run_depend>
  <run_depend>cram_pr2_knowledge</run_depend>
  <run_depend>cram_reasoning</run_depend>
  <run_depend>cram_roslisp_common</run_depend>
  <run_depend>cram_task_knowledge</run_depend>
  <run_depend>designator_integration_msgs</run_depend>
  <run_depend>designators_ros</run_depend>
  <run_depend>location_costmap</run_depend>
  <run_depend>object_location_designators</run_depend>
  <run_depend>occupancy_grid_costmap</run_depend>
  <run_depend>point_head_process_module</run_depend>
  <run_depend>pr2_description_lowres</run_depend>
  <run_depend>pr2_manipulation_knowledge</run_depend>
  <run_depend>pr2_manipulation_process_module</run_depend>
  <run_depend>pr2_navigation_process_module</run_depend>
  <run_depend>pr2_reachability_costmap</run_depend>
  <run_depend>robosherlock_process_module</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>semantic_map_costmap</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
